--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,49 +1,1 @@
-body {
-    height: 100%;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-}
-
-.pageHeader {
-    background-color: rgba(118, 0, 169);
-    border: 0;
-    margin-bottom: 0;
-    padding: 2em;
-}
-
-.pageHeader>a {
-    color: white;
-    text-decoration: none;
-    display: inline;
-    padding: 10px 10px;
-    font-size: 16px;
-}
-
-.pageHeader .active {
-    background-color: rgba(139, 0, 139, 1);
-    border-radius: 10px;
-    padding: 20px;
-}
-.pageHeader>a:hover {
-    background-color: rgba(139, 0, 139, 1);
-    border-radius: 10px;
-    padding: 20px;
-}
-
-ul {
-    list-style: none;
-    overflow: hidden;
-}
-
-.panelHeader {
-    padding-bottom: 10px;
-    padding-top: 10px;
-    display: inline;
-}
-
-
-.images {
-    width: 120px;
-    height: 120px;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");*{box-sizing:border-box}body{height:100vh;width:100vw;margin:0;padding:0;background-color:#f8f8ff;font-family:"Roboto", sans-serif}.nav-search-main{display:flex;justify-content:start;align-items:center}.nav-search-item{margin-right:2rem;list-style:none;text-decoration:none}.nav-search-item a{text-decoration:none}.nav-list{background:#523468;box-shadow:0px 2px 10px grey;margin:0;padding:2rem 0;display:flex;justify-content:flex-end;align-items:center}.nav-item{list-style:none;margin-right:2rem}.nav-item a{text-decoration:none;color:ghostwhite;font-style:italic;transition:all 200ms ease-in-out}.nav-item a:hover{text-decoration:none;color:ghostwhite;font-style:italic;border-radius:.5rem;background:#422a53;padding:1rem}.nav-item:nth-child(6){margin-right:auto}.nav-item:first-child{margin-left:1rem}
