--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 $coolWhite: ghostwhite;
-$someGrey: grey;
 $shadows: 0px 2px 10px;
 $purple: #523468;
 $hoverPurple: #422a53;
@@ -9,19 +8,23 @@ $paddingSmall: 1rem;
 $paddingMedium: 2rem;
 $paddingBig: 3rem;
 $borderRounded: 0.5rem;
+$none: 0;
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
   height: 100vh;
   width: 100vw;
-  margin: 0;
-  padding: 0;
+  margin: $none;
+  padding: $none;
   background-color: $coolWhite;
   font-family: "Roboto", sans-serif;
 }
+// Navigation style
 
 .nav-search-main {
   display: flex;
@@ -30,7 +33,7 @@ body {
 }
 
 .nav-search-item {
-  margin-right: 2rem;
+  margin-right: 0.5rem;
   list-style: none;
   text-decoration: none;
 }
@@ -41,9 +44,9 @@ body {
 
 .nav-list {
   background: $purple;
-  box-shadow: $shadows($someGrey);
-  margin: 0;
-  padding: $paddingMedium 0;
+  // box-shadow: $shadows($someGrey);
+  margin: $none;
+  padding: $paddingMedium;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -56,6 +59,7 @@ body {
 
 .nav-item a {
   text-decoration: none;
+  text-transform: uppercase;
   color: ghostwhite;
   font-style: italic;
   transition: all 200ms ease-in-out;
@@ -78,4 +82,30 @@ body {
 /* adiciona margin para o primeiro item da lista */
 .nav-item:first-child {
   margin-left: 1rem;
+}
+
+/* offcanvas menu */
+.offcanvas-menu {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: $none;
+  left: $none;
+  transform: translateX(-100%);
+  transition: all 400ms ease-in-out;
+
+  &.is-active {
+    transform: none;
+
+  }
+}
+
+.offcanvas-button {
+  float: right;
+  margin: rem-calc(10);
+  z-index: z-index(above);
+  position: relative;
+}
+
+@media only screen and (max-width: 768px) {
 }
