--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 $coolWhite: ghostwhite;
-$shadows: 0px 2px 10px;
 $purple: #523468;
 $hoverPurple: #422a53;
 $paddingExtraSmall: 0.5rem;
@@ -17,95 +16,170 @@ $none: 0;
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  margin: $none;
+  min-height: 100vh;
+  // width: 100vw;
   padding: $none;
   background-color: $coolWhite;
   font-family: "Roboto", sans-serif;
 }
-// Navigation style
-
-.nav-search-main {
-  display: flex;
-  justify-content: start;
-  align-items: center;
+.main {
+  width: 800px;
+  margin: $none auto;
 }
-
-.nav-search-item {
-  margin-right: 0.5rem;
-  list-style: none;
-  text-decoration: none;
-}
-
-.nav-search-item a {
-  text-decoration: none;
-}
-
-.nav-list {
+/* navigation */
+/* exclude nav-search class */
+nav {
   background: $purple;
-  // box-shadow: $shadows($someGrey);
-  margin: $none;
-  padding: $paddingMedium;
   display: flex;
-  justify-content: flex-end;
+  flex-wrap: wrap;
   align-items: center;
-}
+  justify-content: space-between;
+  height: 70px;
+  padding: $none 50px;
 
-.nav-item {
-  list-style: none;
-  margin-right: $paddingMedium;
-}
+  .nav-items {
+    display: flex;
+    justify-content: start !important;
+    list-style: none;
+    padding: $none $none $none 40px;
 
-.nav-item a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: ghostwhite;
-  font-style: italic;
-  transition: all 200ms ease-in-out;
-}
-
-.nav-item a:hover {
-  text-decoration: none;
-  color: ghostwhite;
-  font-style: italic;
-  border-radius: $borderRounded;
-  background: $hoverPurple;
-  padding: $paddingSmall;
-}
-
-/* adiciona margin a partir do sexto item */
-.nav-item:nth-child(6) {
-  margin-right: auto;
-}
-
-/* adiciona margin para o primeiro item da lista */
-.nav-item:first-child {
-  margin-left: 1rem;
-}
-
-/* offcanvas menu */
-.offcanvas-menu {
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  top: $none;
-  left: $none;
-  transform: translateX(-100%);
-  transition: all 400ms ease-in-out;
-
-  &.is-active {
-    transform: none;
-
+    li {
+      padding: $none 15px;
+    }
+  }
+  .menu-icon,
+  .search-icon,
+  .cancel-icon {
+    width: 40px;
+    color: white;
+    text-align: center;
+    margin: 0 50px;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
+  }
+  .menu-icon span,
+  .search-icon,
+  .cancel-icon {
+    display: none;
   }
 }
 
-.offcanvas-button {
-  float: right;
-  margin: rem-calc(10);
-  z-index: z-index(above);
-  position: relative;
+nav .nav-items li a {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  font-style: italic;
+  &:hover {
+    border-bottom: 0.1px solid white;
+    transition: all 300ms ease-in-out;
+  }
+}
+.top-nav {
+  background: red;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: -1px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .logo {
+    margin-left: 1rem;
+  }
 }
 
-@media only screen and (max-width: 768px) {
+form {
+  display: flex;
+  height: 30px;
+  border-radius: 10px;
+  padding: 2px;
+  margin-right: 1rem;
+  background: $coolWhite;
+  min-width: 18% !important;
+
+  .search-data {
+    height: 100%;
+    width: 100%;
+    padding: 0 10px;
+    font-weight: 500;
+    font-size: 17px;
+    border: none;
+  }
+  button {
+    padding: 0 15px;
+    background: white;
+    border: none;
+    cursor: pointer;
+    font-size: 17px;
+    color: black;
+    border-radius: 10px;
+  }
+}
+
+/* gallery */
+.gallery {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+  justify-content: center;
+}
+.gallery-title {
+  display: flex;
+  justify-content: center;
+}
+.gallery-img {
+  width: 15rem;
+}
+
+@media (max-width: 1245px) {
+  nav {
+    padding: $none 0px;
+  }
+}
+@media (max-width: 1140px) {
+  nav {
+    padding: 0px;
+
+    .nav-items {
+      position: fixed;
+      z-index: 98;
+      top: 58px;
+      width: 100%;
+      height: 100%;
+      background: $hoverPurple;
+      display: flex;
+      flex-direction: column;
+      padding: 10px 50px 0 50px;
+      align-items: center;
+
+      li {
+        line-height: 40px;
+        margin: 10px 0;
+      }
+      a {
+        font-size: 20px;
+      }
+    }
+    .menu-icon {
+      display: block;
+      z-index: 99;
+    }
+    .search-icon,
+    .menu-icon span {
+      display: block;
+      z-index: 99;
+    }
+  }
+
+  form {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .menu-icon,
+  .search-icon,
+  .cancel-icon {
+    display: initial;
+  }
 }
