--- a/css/style.scss
+++ b/css/style.scss
@@ -26,96 +26,6 @@ body {
   width: 800px;
   margin: $none auto;
 }
-/* navigation */
-/* exclude nav-search class */
-nav {
-  background: $purple;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  height: 70px;
-  padding: $none 50px;
-
-  .nav-items {
-    display: flex;
-    justify-content: start !important;
-    list-style: none;
-    padding: $none $none $none 40px;
-
-    li {
-      padding: $none 15px;
-    }
-  }
-  .menu-icon,
-  .search-icon,
-  .cancel-icon {
-    width: 40px;
-    color: white;
-    text-align: center;
-    margin: 0 50px;
-    font-size: 18px;
-    cursor: pointer;
-    display: none;
-  }
-  .menu-icon span,
-  .search-icon,
-  .cancel-icon {
-    display: none;
-  }
-}
-
-nav .nav-items li a {
-  color: white;
-  text-decoration: none;
-  display: flex;
-  font-style: italic;
-  &:hover {
-    border-bottom: 0.1px solid white;
-    transition: all 300ms ease-in-out;
-  }
-}
-.top-nav {
-  background: red;
-  height: 50px;
-  font-size: 20px;
-  font-weight: 300;
-  letter-spacing: -1px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .logo {
-    margin-left: 1rem;
-  }
-}
-
-form {
-  display: flex;
-  height: 30px;
-  border-radius: 10px;
-  padding: 2px;
-  margin-right: 1rem;
-  background: $coolWhite;
-  min-width: 18% !important;
-
-  .search-data {
-    height: 100%;
-    width: 100%;
-    padding: 0 10px;
-    font-weight: 500;
-    font-size: 17px;
-    border: none;
-  }
-  button {
-    padding: 0 15px;
-    background: white;
-    border: none;
-    cursor: pointer;
-    font-size: 17px;
-    color: black;
-    border-radius: 10px;
-  }
-}
 
 /* gallery */
 .gallery {
@@ -131,55 +41,238 @@ form {
 .gallery-img {
   width: 15rem;
 }
+/* gallery */
+/* navigation desktop + mobile */
 
+nav {
+  background: $purple;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  height: 70px;
+  padding: 0 100px;
+  //
+  .logo {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: -1px;
+  }
+  //
+  .nav-items {
+    display: flex;
+    flex: 1;
+    padding: 0 0 0 40px;
+  }
+
+  //
+  .nav-items li {
+    list-style: none;
+    padding: 0 15px;
+    &:last-child {
+      margin-left: auto;
+    }
+  }
+  //
+  .nav-items li a {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    text-decoration: none;
+    &:hover {
+      color: $hoverPurple;
+    }
+  }
+}
+
+nav form {
+  display: flex;
+  height: 40px;
+  padding: 2px;
+  background: #1e232b;
+  min-width: 18% !important;
+  border-radius: 2px;
+  border: 1px solid rgba(155, 155, 155, 0.2);
+  //
+  .search-data {
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+    color: #fff;
+    font-size: 17px;
+    border: none;
+    font-weight: 500;
+    background: none;
+  }
+}
+
+nav form button {
+  padding: 0 15px;
+  color: #fff;
+  font-size: 17px;
+  background: #ff3d00;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  &:hover {
+    background: #e63600;
+  }
+}
+nav .menu-icon,
+nav .cancel-icon,
+nav .search-icon {
+  width: 40px;
+  text-align: center;
+  margin: 0 50px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+nav .menu-icon span,
+nav .cancel-icon,
+nav .search-icon {
+  display: none;
+}
 @media (max-width: 1245px) {
   nav {
-    padding: $none 0px;
+    padding: 0 50px;
+    background: none;
+    .logo {
+      color: $purple;
+    }
+  }
+  nav .menu-icon,
+  nav .cancel-icon,
+  nav .search-icon {
+    color: $purple;
   }
 }
 @media (max-width: 1140px) {
   nav {
     padding: 0px;
-
+    .logo {
+      flex: 2;
+      text-align: center;
+    }
     .nav-items {
       position: fixed;
-      z-index: 98;
-      top: 58px;
+      z-index: 99;
+      top: 70px;
       width: 100%;
+      left: -100%;
       height: 100%;
-      background: $hoverPurple;
-      display: flex;
-      flex-direction: column;
       padding: 10px 50px 0 50px;
-      align-items: center;
-
-      li {
-        line-height: 40px;
-        margin: 10px 0;
-      }
-      a {
-        font-size: 20px;
-      }
+      text-align: center;
+      background: $purple;
+      display: inline-block;
+      transition: left 0.3s ease;
     }
-    .menu-icon {
-      display: block;
-      z-index: 99;
+    .nav-items.active {
+      left: 0px;
     }
-    .search-icon,
-    .menu-icon span {
-      display: block;
-      z-index: 99;
+    .nav-items li {
+      line-height: 40px;
+      margin: 30px 0;
+    }
+    .nav-items li a {
+      font-size: 20px;
     }
   }
 
-  form {
+  nav form {
+    position: absolute;
+    top: 80px;
+    right: 50px;
+    opacity: 0;
+    pointer-events: none;
+    transition: top 0.3s ease, opacity 0.1s ease;
+    .active {
+      top: 95px;
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+
+  nav form:before {
+    position: absolute;
+    content: "";
+    top: -13px;
+    right: 0px;
+    width: 0;
+    height: 0;
+    z-index: -1;
+    border: 10px solid transparent;
+    border-bottom-color: $purple;
+    margin: -20px 0 0;
+  }
+  nav form:after {
+    position: absolute;
+    content: "";
+    height: 60px;
+    padding: 2px;
+    background: #1e232b;
+    border-radius: 2px;
+    min-width: calc(100% + 20px);
+    z-index: -2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  nav .menu-icon {
+    display: block;
+  }
+  nav .search-icon,
+  nav .menu-icon span {
+    display: block;
+  }
+  nav .menu-icon span.hide,
+  nav .search-icon.hide {
     display: none;
   }
-}
-@media (max-width: 768px) {
-  .menu-icon,
-  .search-icon,
-  .cancel-icon {
-    display: initial;
+  nav .cancel-icon.show {
+    display: block;
   }
 }
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+.content header {
+  font-size: 30px;
+  font-weight: 700;
+}
+.content .text {
+  font-size: 30px;
+  font-weight: 700;
+}
+.space {
+  margin: 10px 0;
+}
+nav .logo.space {
+  color: red;
+  padding: 0 5px 0 0;
+}
+@media (max-width: 980px) {
+  nav .menu-icon,
+  nav .cancel-icon,
+  nav .search-icon {
+    margin: 0 20px;
+  }
+  nav form {
+    right: 30px;
+  }
+}
+@media (max-width: 350px) {
+  nav .menu-icon,
+  nav .cancel-icon,
+  nav .search-icon {
+    margin: 0 10px;
+    font-size: 16px;
+  }
+}
+/* navigation desktop + mobile */
